@@ -1,7 +1,0 @@
-Obsoletes: pupmod-sssd-test >= 0.0.1
-Requires: pupmod-simp-auditd < 8.0.0-0
-Requires: pupmod-simp-auditd >= 7.0.0-0
-Requires: pupmod-simp-simpcat < 7.0.0-0
-Requires: pupmod-simp-simpcat >= 6.0.0-0
-Requires: pupmod-simp-simplib < 4.0.0-0
-Requires: pupmod-simp-simplib >= 3.1.0-0
