@@ -30,8 +30,8 @@ define sssd::domain (
   Boolean                                    $debug_timestamps             = true,
   Boolean                                    $debug_microseconds           = false,
   Optional[String]                           $description                  = undef,
-  Integer                                    $min_id                       = to_integer($facts['uid_min']),
-  Integer                                    $max_id                       = 0,
+  Integer[0]                                 $min_id                       = simplib::lookup('simp_options::uid::min', { 'default_value' => pick(fact('login_defs.uid_min'), 1000) }),
+  Integer[0]                                 $max_id                       = simplib::lookup('simp_options::uid::max', { 'default_value' => pick(fact('login_defs.uid_max'), 0 ) }),
   Boolean                                    $enumerate                    = false,
   Boolean                                    $subdomain_enumerate          = false,
   Optional[Integer]                          $force_timeout                = undef,
@@ -45,8 +45,8 @@ define sssd::domain (
   Optional[Integer]                          $entry_cache_ssh_host_timeout = undef,
   Optional[Integer]                          $refresh_expired_interval     = undef,
   Boolean                                    $cache_credentials            = false,
-  Integer                                    $account_cache_expiration     = 0,
-  Optional[Integer]                          $pwd_expiration_warning       = undef,
+  Integer[0]                                 $account_cache_expiration     = 0,
+  Optional[Integer[0]]                       $pwd_expiration_warning       = undef,
   Boolean                                    $use_fully_qualified_names    = false,
   Boolean                                    $ignore_group_members         = true,
   Optional[Sssd::AccessProvider]             $access_provider              = undef,
@@ -60,7 +60,7 @@ define sssd::domain (
   Optional[String]                           $re_expression                = undef,
   Optional[String]                           $full_name_format             = undef,
   Optional[String]                           $lookup_family_order          = undef,
-  Integer                                    $dns_resolver_timeout         = 5,
+  Integer[0]                                 $dns_resolver_timeout         = 5,
   Optional[String]                           $dns_discovery_domain         = undef,
   Optional[String]                           $override_gid                 = undef,
   Variant[Boolean,Enum['preserving']]        $case_sensitive               = true,
