@@ -1,3 +1,7 @@
+* Wed Dec 13 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.5-0
+- Enforce limits set in /etc/login.defs for uid_min and uid_max by default and
+  fall back to something sensible for SSSD
+
 * Mon Sep 18 2017 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 6.0.4-0
 - Set minimum length on sssd::domains
 
